data/derived/comb/progs/unify/prog7685.ml.out
Characters 76-79:
  let stringOfList f l =  sepConcat ";" (List.map (fun t -> let g = f t in g::"]") l);;
                                                                              ^^^
Error: This expression has type string but an expression was expected of type
         'a list
